fix: setup content

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -75,6 +75,8 @@ output:
     <img alt="step-3" src=".github/assets/step-3.png"/>
     </div>
 
+    Ao final desse processo você estará apto para receber os alertas do Security Hub no Opsgenie.
+
     ---
 
     <div align="center">
