--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -35,10 +35,10 @@ output:
     [![Commitizen friendly](https://img.shields.io/badge/commitizen-friendly-brightgreen.svg)](https://www.conventionalcommits.org/en/v1.0.0/)
     [![Built with Devbox](https://jetpack.io/img/devbox/shield_galaxy.svg)](https://jetpack.io/devbox/docs/contributor-quickstart/)
 
+    Nesse módulo, iremos configurar o [Opsgenie](https://www.atlassian.com/software/opsgenie) para receber alertas do [AWS Security Hub](https://aws.amazon.com/security-hub/).
+    
     </div>
 
-    Nesse módulo, você irá configurar o [Opsgenie](https://www.atlassian.com/software/opsgenie) para receber alertas do [AWS Security Hub](https://aws.amazon.com/security-hub/). Ao receber um finding do Security Hub, o Opsgenie irá criar um alerta para que você possa tomar as devidas providências. 
-    
     ## Architecture
 
     O AWS EventBridge é um serviço de integração de eventos. Ele permite que você capture eventos de várias fontes, incluindo serviços da AWS como o Security Hub, e os direcione para diferentes destinos, como o AWS SNS. Com o EventBridge, você pode criar regras que definem quais eventos devem ser capturados e para onde eles devem ser enviados. Nesse caso, estaremos criando uma regra para capturar eventos do Security Hub e os enviar para um tópico do SNS.
