--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -44,7 +44,11 @@ output:
     O AWS EventBridge é um serviço de integração de eventos. Ele permite que você capture eventos de várias fontes, incluindo serviços da AWS como o Security Hub, e os direcione para diferentes destinos, como o AWS SNS. Com o EventBridge, você pode criar regras que definem quais eventos devem ser capturados e para onde eles devem ser enviados. Nesse caso, estaremos criando uma regra para capturar eventos do Security Hub e os enviar para um tópico do SNS.
     
     O AWS SNS é um serviço de mensagens e notificações que facilita a comunicação entre sistemas distribuídos. Ele permite que você publique mensagens para tópicos e que os assinantes desses tópicos recebam essas mensagens. No contexto desta integração, o SNS será usado para enviar notificações do Security Hub para o Opsgenie.
-    
+
+    <div align="center">
+    <img alt="architecture-1" src=".github/assets/architecture-1.png"/>
+    </div>
+
     {{ .Content }}
 
     ## Extras
