--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -65,6 +65,10 @@ output:
 
     **Automatic Trigger:**    
 
+    <div align="center">
+    <img alt="architecture-2" src=".github/assets/architecture-2.png"/>
+    </div>
+
     {{ .Content }}
 
     ## Extras
