fix: setup common

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -77,7 +77,8 @@ output:
     
     ### Opsgenie Integration
     
-    Após a execução do projeto Terraform, você terá que finalizar a configuração do Opsgenie pela interface web. Para isso, siga os passos abaixo:
+    > [WARNING]
+    > Após a execução do projeto Terraform, você terá que finalizar a configuração do Opsgenie pela interface web. Para isso, siga os passos abaixo.
 
     **Step 1:**
 
