fix: setup common

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -108,7 +108,7 @@ output:
 
     ### Opsgenie Alerts Rules
 
-    Para customizar as mensagens dos alerts do Opsgenie, você deverá editar a regra de "Incoming" da sua integração, nesse caso, da Integração com o Security Hub.
+    Para customizar as mensagens dos alertas do Opsgenie, você deverá editar a regra de "Incoming" da sua integração.
 
     <div align="center">
     <img alt="alert-rule" src=".github/assets/alert-rule.png"/>
