fix: setup config

--- a/.github/config/opsgenie.yaml
+++ b/.github/config/opsgenie.yaml
@@ -1,8 +1,5 @@
 ---
 types:
-# ================================
-# SETUP OPSGENIE - CRITICAL
-# ================================
   critical:
     rule:
       name: Create Alert - CRITICAL
@@ -14,8 +11,9 @@ types:
             condition: Equals
             value: CRITICAL
     alert-properties:
-      alert-message: |
-        Inspector:ECR - {{findings.get(0).extract(/RepositoryName=([^,]+)/)}} - {{title}}
+      alert-message: >
+        Inspector:ECR -
+        {{findings.get(0).extract(/RepositoryName=([^,]+)/)}} - {{title}}
       priority: P1
       tags:
         - aws:account:id={{awsAccountId}}
@@ -28,22 +26,25 @@ types:
         - severity={{severity}}
       alias: |
         {{findingId}}
-      description: |
+      description: >
         {{description}}
 
+
         Para mais informações entre na conta de security-services e acesse:
+
 
         https://{{region}}.console.aws.amazon.com/securityhub/home?region={{region}}#/findings?search=ProductName%3D%255Coperator%255C%253AEQUALS%255C%253AInspector%26ResourceType%3D%255Coperator%255C%253AEQUALS%255C%253AAwsEcrContainerImage%26WorkflowStatus%3D%255Coperator%255C%253AEQUALS%255C%253A{{workflowStatus}}%26WorkflowStatus%3D%255Coperator%255C%253AEQUALS%255C%253ANOTIFIED%26RecordState%3D%255Coperator%255C%253AEQUALS%255C%253AACTIVE%26SeverityLabel%3D%255Coperator%255C%253AEQUALS%255C%253A{{severity}}
       entity: |
         {{findings.get(0).extract(/RepositoryName=([^,]+)/)}}
       details:
-        - generatorId: {{generatorId}}
-        - productArn: {{productArn}}
-        - schemaVersion: {{schemaVersion}}
-        - findingId: {{findingId}}
-# ================================
-# SETUP OPSGENIE - HIGH
-# ================================
+        - generatorId:
+            "{ generatorId }": null
+        - productArn:
+            "{ productArn }": null
+        - schemaVersion:
+            "{ schemaVersion }": null
+        - findingId:
+            "{ findingId }": null
   high:
     rule:
       name: Create Alert - HIGH
@@ -55,8 +56,9 @@ types:
             condition: Equals
             value: High
     alert-properties:
-      alert-message: |
-        Inspector:ECR - {{findings.get(0).extract(/RepositoryName=([^,]+)/)}} - {{title}}
+      alert-message: >
+        Inspector:ECR -
+        {{findings.get(0).extract(/RepositoryName=([^,]+)/)}} - {{title}}
       priority: P2
       tags:
         - aws:account:id={{awsAccountId}}
@@ -67,12 +69,14 @@ types:
         - image:name={{findings.get(0).extract(/RepositoryName=([^,]+)/)}}
         - image:tags={{findings.get(0).substringBetween("ImageTags=[","]")}}
         - severity={{severity}}
-      alias: |
+      alias: >
         {{findings.get(0).extract(/RepositoryName=([^,]+)/)}}-{{findings.get(0).substringBetween("ImageTags=[","]")}}
-      description: |
+      description: >
         {{description}}
 
+
         Para mais informações entre na conta de security-services e acesse:
+
 
         https://{{region}}.console.aws.amazon.com/securityhub/home?region={{region}}#/findings?search=ProductName%3D%255Coperator%255C%253AEQUALS%255C%253AInspector%26ResourceType%3D%255Coperator%255C%253AEQUALS%255C%253AAwsEcrContainerImage%26WorkflowStatus%3D%255Coperator%255C%253AEQUALS%255C%253A{{workflowStatus}}%26WorkflowStatus%3D%255Coperator%255C%253AEQUALS%255C%253ANOTIFIED%26RecordState%3D%255Coperator%255C%253AEQUALS%255C%253AACTIVE%26SeverityLabel%3D%255Coperator%255C%253AEQUALS%255C%253A{{severity}}
       entity: |
@@ -82,7 +86,11 @@ types:
 
         {{description}}
       details:
-        - generatorId: {{generatorId}}
-        - productArn: {{productArn}}
-        - schemaVersion: {{schemaVersion}}
-        - findingId: {{findingId}}
+        - generatorId:
+            "{ generatorId }": null
+        - productArn:
+            "{ productArn }": null
+        - schemaVersion:
+            "{ schemaVersion }": null
+        - findingId:
+            "{ findingId }": null
