docs: change contributing

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -119,7 +119,7 @@ output:
 
     ### Opsgenie Alerts Rules
 
-    Para customizar as mensagens dos alertas do Opsgenie, você deverá editar a regra de "Incoming" da sua integração.
+    Para customizar seus alertas, você deverá editar a regra de "Incoming" da sua integração.
 
     <div align="center">
     <img alt="alert-rule" src=".github/assets/alert-rule.png"/>
