docs: change contributing

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -125,7 +125,7 @@ output:
     <img alt="alert-rule" src=".github/assets/alert-rule.png"/>
     </div>
 
-    Uma das possibilidades com isso é a criação de mensagens customizadas de acordo com regras condicionais. Por exemplo:
+    Na imagem acima é exemplificado como você pode customizar suas regras de alerta. Nesse caso, temos:
 
     - Definir mensagem específica para alertas **CRITICAL**
     - Definir mensagem específica para alertas **HIGH**
