docs: change contributing

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -127,8 +127,8 @@ output:
 
     Na imagem acima é exemplificado como você pode customizar suas regras de alerta. Nesse caso, temos:
 
-    - Definir mensagem específica para alertas **CRITICAL**
-    - Definir mensagem específica para alertas **HIGH**
+    - Criar alerta para severidade **CRITICAL**.
+    - Criar alerta para severidade **HIGH**.
 
     Cada regra de alerta permite personalizar vários elementos:
 
