docs: change contributing

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -130,7 +130,7 @@ output:
     - Criar alerta para severidade **CRITICAL**.
     - Criar alerta para severidade **HIGH**.
 
-    Cada regra de alerta permite personalizar vários elementos:
+    Cada regra de alerta permite personalizar vários elementos, como:
 
     - Mensagem
     - Prioridade
@@ -140,7 +140,9 @@ output:
     - Entidade
     - Notas
 
-    Para tornar seus alertas mais informativos e relevantes, o Opsgenie utiliza o conceito chamado [Dynamic fields](https://support.atlassian.com/opsgenie/docs/dynamic-fields-in-opsgenie-integrations/). Esses campos são usados para:
+    Ao criar uma regra, você poderar editar esses campos para que o alerta seja mais informativo e relevante para sua equipe.
+
+    Além disso, o Opsgenie utiliza o conceito chamado [Dynamic fields](https://support.atlassian.com/opsgenie/docs/dynamic-fields-in-opsgenie-integrations/). Esses campos são usados para:
 
     - Personalizar propriedades de alerta
     - Ajustar condições de alerta com base em informações atualizadas
