docs: change contributing

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -132,13 +132,13 @@ output:
 
     Cada regra de alerta permite personalizar vários elementos, como:
 
-    - Mensagem
-    - Prioridade
-    - Tags
-    - Alias
-    - Descrição
-    - Entidade
-    - Notas
+    - **Mensagem**
+    - **Prioridade**
+    - **Tags**
+    - **Alias**
+    - **Descrição**
+    - **Entidade**
+    - **Notas**
 
     Ao criar uma regra, você poderar editar esses campos para que o alerta seja mais informativo e relevante para sua equipe.
 
