docs: change contributing

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -147,7 +147,7 @@ output:
     - Personalizar propriedades (elementos) do alerta.
     - Ajustar condições do alerta com base em informações atualizadas.
 
-    Usando Dynamic fields você pode criar alertas que se adaptam automaticamente às mudanças em seu ambiente, fornecendo informações mais precisas e úteis para sua equipe.
+    Usando Dynamic fields você pode criar alertas que se adaptam automaticamente às mudanças em seu ambiente.
 
     <p align="right">(<a href="#readme-top">back to top</a>)</p>
 
