feat: add workflows

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -11,6 +11,7 @@ vars:
   PATH_ERROR: is not installed or correctly configured in PATH.
 
 includes:
+  g: .github/taskfiles/github.yaml
   precommit: .github/taskfiles/pre-commit.yaml
   tf: .github/taskfiles/terraform.yaml
 
