--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -17,7 +17,7 @@ sections:
 content: ""
 
 output:
-  file: "README.md"
+  file: "../README.md"
   mode: inject
   template: |-
     <!-- BEGIN_TF_DOCS -->
