fix: setup names

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -35,7 +35,7 @@ output:
     [![Commitizen friendly](https://img.shields.io/badge/commitizen-friendly-brightgreen.svg)](https://www.conventionalcommits.org/en/v1.0.0/)
     [![Built with Devbox](https://jetpack.io/img/devbox/shield_galaxy.svg)](https://jetpack.io/devbox/docs/contributor-quickstart/)
 
-    Integração do [Opsgenie](https://www.atlassian.com/software/opsgenie) e o [Amazon Security Hub](https://aws.amazon.com/security-hub/) utilizando o [Terraform](https://www.terraform.io/).
+    Integração do [Opsgenie](https://www.atlassian.com/software/opsgenie) + [Amazon Security Hub](https://aws.amazon.com/security-hub/) utilizando o [Terraform](https://www.terraform.io/).
     
     </div>
 
