fix: docs small changes

--- a/.github/config/.terraform-docs.yaml
+++ b/.github/config/.terraform-docs.yaml
@@ -85,6 +85,8 @@ output:
     {{ .Content }}
 
     ## Extras
+
+    Informações adicionais para que você possa configurar e utilizar a integração.
     
     ### Opsgenie Integration
     
